# reminex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  NEW_FEATURES.md  README.md  README_EN.md  ROOT_PATH_REPLACEMENT.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: rust.yml
src/: db.rs  export.rs  history.rs  indexer.rs  lib.rs  main.rs  searcher.rs  web.rs
static/: index.html  indexer.html
