[package]
name = "reminex"
version = "0.1.0"
edition = "2024"
authors = ["Reminex Contributors"]
description = "A high-performance file indexing and searching tool powered by SQLite"
readme = "README.md"
homepage = "https://github.com/yourusername/reminex"
repository = "https://github.com/yourusername/reminex"
license = "MIT"
keywords = ["file-search", "indexer", "sqlite", "cli", "search-engine"]
categories = ["command-line-utilities", "filesystem", "database"]

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
indicatif = "0.17.10"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false