[package]
name = "reminex"
version = "0.2.0"
edition = "2024"
authors = ["Zhixia <zhixiaovo@gmail.com>"]
description = "A high-performance file indexing and searching tool powered by SQLite"
readme = "README.md"
homepage = "https://github.com/zxzxovo/reminex"
repository = "https://github.com/zxzxovo/reminex"
license = "MIT"
keywords = ["file-search", "indexer", "sqlite", "cli", "search-engine"]
categories = ["command-line-utilities", "filesystem", "database"]

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
indicatif = "0.17.10"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false